<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" 
  android:key="patient_option_preference"
  android:title="@string/prefTitle"
  android:summary="@string/prefSummary"
>
  <PreferenceCategory
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="connection_category"
    android:title="@string/con_cat"
    android:summary="@string/con_cat_summary">
	<EditTextPreference
	  android:key="@string/serverAddressOption"
	  android:title="@string/serverAddressTitle"
	  android:summary="@string/serverAddressSummary"
	  android:dialogTitle="@string/serverAddressDialog"
	/>
	<EditTextPreference
	  android:key="@string/loginOption"
	  android:title="@string/loginTitle"
	  android:summary="@string/loginSummary"
	  android:dialogTitle="@string/loginDialog"
	/>
	<EditTextPreference
	  android:key="@string/passOption"
	  android:title="@string/passTitle"
	  android:summary="@string/passSummary"
	  android:dialogTitle="@string/passDialog"
	  android:inputType="textPassword"
	/>
	<EditTextPreference
	  android:key="@string/telelphoneNumberOption"
	  android:title="@string/telelphoneNumberTitle"
	  android:summary="@string/telelphoneNumberSummary"
	  android:dialogTitle="@string/telelphoneNumberDialog"
	  android:inputType="number"
	/>
 </PreferenceCategory>
 <PreferenceCategory
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="connection_category"
    android:title="@string/gps_cat"
    android:summary="@string/gps_cat_summary">
    <EditTextPreference
	  android:key="@string/updateTimeOption"
	  android:title="@string/updateTimeTitle"
	  android:summary="@string/updateTimeSummary"
	  android:dialogTitle="@string/updateTimeDialog"
	  android:inputType="number"
	/>
 </PreferenceCategory>
 <PreferenceCategory
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="connection_category"
    android:title="@string/photo_cat"
    android:summary="@string/photo_cat_summary">
    <ListPreference
    	android:key="@string/resolutionOption"
      	android:title="@string/resolutionTitle"
      	android:summary="@string/resolutionSummary"
      	android:entries="@array/resolution_entries"
      	android:entryValues="@array/resolution_entryValues"
      	android:defaultValue="@string/resolution_defaultValue"
    />
 </PreferenceCategory>  	
</PreferenceScreen>