<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_wrong_preferences_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/wrong_preferences_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tv_wrong_preferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ff0000" />

    <Button
        android:id="@+id/button_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="setDefault"
        android:text="@string/default_button" />

    <Button
        android:id="@+id/button_preference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openPreferences"
        android:text="@string/preference_button" />

</LinearLayout>